--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
                 <img class="carmen" src="../../../assets/img/carro.svg" alt="carrito logo">
             </div>
         </div>
-        <app-descripcion-boleta-main></app-descripcion-boleta-main>
+        <app-info-user-main></app-info-user-main>
         <footer class="col-s-12">
             <p>Todos los derechos reservados por la empresa de Bebidas Time</p>
         </footer>
