--- a/src/app/descripcion-boleta/descripcion-boleta-main/descripcion-boleta-main.component.html
+++ b/src/app/descripcion-boleta/descripcion-boleta-main/descripcion-boleta-main.component.html
@@ -27,7 +27,7 @@
                 
                 <div   class="producto">
                     <div id="nombre">
-                        <p>{{producto.getproductoDetalleReserva().producto.getnombreproducto()}}</p>
+                        <p>{{producto.getproductoDetalleReserva().producto.getnombreproducto}}</p>
                     </div>
 
                     <div id="precio">
