--- a/src/app/gestion/gestion-categoria-main/gestion-categoria-main.component.html
+++ b/src/app/gestion/gestion-categoria-main/gestion-categoria-main.component.html
@@ -35,9 +35,9 @@
                 </tr>
             
                 <tr *ngFor="let categoria of categorias,let i=index">
-                    <td>{{categoria.getcodCategoria()}}</td>
-                    <td>{{categoria.getnombreCategoria()}}</td>
-                    <td><input type="checkbox" (click)="eliminacion.unshift(i)"></td>
+                    <td>{{categoria.getcodCategoria}}</td>
+                    <td>{{categoria.getnombreCategoria}}</td>
+                    <td><input type="checkbox"   (click)="eliminacion.unshift(i)"></td>
                 </tr>
             
                 
