--- a/src/app/productos/productos-main/productos-main.component.html
+++ b/src/app/productos/productos-main/productos-main.component.html
@@ -10,11 +10,11 @@
 
                 <div *ngFor="let productolocal1 of productoslocal" class="col-s-6 col-m-4 fotos">
                     
-                    <img src={{productolocal1.producto.getimagenproducto()}} alt="">
+                    <img src={{productolocal1.producto.getimagenproducto}} alt="">
                         <div class="infor">
-                            <h1>{{productolocal1.producto.getnombreproducto()}}</h1>
-                            <p>{{productolocal1.producto.getdescripcionproducto()}}</p>
-                            <h2>{{productolocal1.getprecioproductolocal()}}</h2>
+                            <h1>{{productolocal1.producto.getnombreproducto}}</h1>
+                            <p>{{productolocal1.producto.getdescripcionproducto}}</p>
+                            <h2>{{productolocal1.getprecioproductolocal}}</h2>
                         </div>
                         <div class="boton">
                             <ul>
