--- a/src/app/categoria/categoria-main/categoria-main.component.html
+++ b/src/app/categoria/categoria-main/categoria-main.component.html
@@ -12,9 +12,9 @@
 <div class="col-s-12 categoria">
     <div *ngFor="let categoria of categorias; let i=index" class="col-s-6 col-m-4 col-l-3 caja">
         
-        <h2 *ngIf="i%2==0;else estilo2" class="estilo1">{{categoria.getnombreCategoria()}}</h2>
+        <h2 *ngIf="i%2==0;else estilo2" class="estilo1">{{categoria.getnombreCategoria}}</h2>
         <ng-template #estilo2>
-            <h2 class="estilo2">{{categoria.getnombreCategoria()}}</h2>
+            <h2 class="estilo2">{{categoria.getnombreCategoria}}</h2>
       </ng-template>
     </div>
 
