--- a/src/app/info-user/info-user-main/info-user-main.component.html
+++ b/src/app/info-user/info-user-main/info-user-main.component.html
@@ -9,17 +9,17 @@
         <div class="col-s-12 col-m-6" >
             <div class="info" >
                 <h1>Usuario</h1>
-                <p>{{ usuarios[0].getusuariousuario() }}</p>
+                <p>{{ usuarios[0].getusuariousuario }}</p>
                 <h1>Nombres y Apellidos</h1>
-                <p>{{ usuarios[0].getnombreUsuario()}}  {{usuarios[0].getApellidoUsuario() }}</p>
+                <p>{{ usuarios[0].getnombreUsuario}}  {{usuarios[0].getApellidoUsuario }}</p>
                 <h1>Direccion</h1>
-                <p>{{ usuarios[0].getDireccionUsuario() }}</p>
+                <p>{{ usuarios[0].getDireccionUsuario }}</p>
                 <h1>DNI</h1>
-                <p>{{ usuarios[0].getdniUsuario() }}</p>
+                <p>{{ usuarios[0].getdniUsuario }}</p>
                 <h1>Numero de Contacto</h1>
-                <p>{{ usuarios[0].getcelularUsuario() }}</p>
+                <p>{{ usuarios[0].getcelularUsuario }}</p>
                 <h1>Correo Electronico</h1>
-                <p>{{ usuarios[0].getCorreoUsuario() }}</p>
+                <p>{{ usuarios[0].getCorreoUsuario }}</p>
             </div>
         </div>
 
