--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,22 @@
 <div class="container">
     <div class="row">
-        <div class="col-s-12 ">
-            <div class="header" >
-                <img id="logo" src="../../../assets/img/logo2.svg" alt="logo">
-                <img class="carmen" src="../../../assets/img/men.svg" alt="menu logo">
-                <img class="carmen" src="../../../assets/img/carro.svg" alt="carrito logo">
-            </div>
-        </div>
+        <app-header></app-header>
+        <!-- <app-login-main></app-login-main> -->
         <!-- <app-categoria-main></app-categoria-main> -->
         <!-- <app-codigo-qr-main></app-codigo-qr-main> -->
         <!-- <app-descripcion-boleta-main></app-descripcion-boleta-main> -->
         <!-- <app-entrega-pedidos-main></app-entrega-pedidos-main> -->
-
-        <app-gestion-categoria-main></app-gestion-categoria-main>
+        <!-- <app-gestion-categoria-main></app-gestion-categoria-main> -->
         <!-- <app-gestion-marca-main></app-gestion-marca-main> -->
         <!-- <app-gestion-producto-main></app-gestion-producto-main> -->
         <!-- <app-gestion-proveedor-main></app-gestion-proveedor-main> -->
-
         <!-- <app-producto-distribuidor-main></app-producto-distribuidor-main> -->
-
         <!-- <app-info-user-main></app-info-user-main> -->
-        <!-- <app-login-main></app-login-main> -->
-
         <!-- <app-productos-main></app-productos-main> -->
         <!-- <app-registro-usuario-main></app-registro-usuario-main> -->
         <!-- <app-reversa-main></app-reversa-main> -->
-        <footer class="col-s-12">
-            <p>Todos los derechos reservados por la empresa de Bebidas Time</p>
-        </footer>
+        <router-outlet></router-outlet>
+        <app-footer></app-footer>
     </div>
 </div>
 
