--- a/src/app/entrega-pedidos/entrega-pedidos-main/entrega-pedidos-main.component.html
+++ b/src/app/entrega-pedidos/entrega-pedidos-main/entrega-pedidos-main.component.html
@@ -1,17 +1,17 @@
 <div class="col-s-12">
     <div class="caja1">
         <table class="col-s-12">
-            <tr *ngFor="let reserva of reservasnoEntregado;let i=index">
-                <td class="col-s-10 pedido">{{reserva.getusuarioreserva().getnombreUsuario()}}</td>
-                <td class="col-s-2 entrega"><button (click)="entregado(i)">Entrega</button></td>
+            <tr *ngFor="let reserva of entregaService.reservasnoEntregado;let i=index">
+                <td class="col-s-10 pedido">{{reserva.getusuarioreserva.getnombreUsuario}}</td>
+                <td class="col-s-2 entrega"><button (click)="entregaService.entregado(i)">Entrega</button></td>
             </tr>
         </table>
     </div>
     <div>
         <h2 >Pedidos Entregados</h2>
         <table class="col-s-12">
-            <tr *ngFor="let reserva of reservasEntregado">
-                <td class="col-s-10 pedido">{{reserva.getusuarioreserva().getnombreUsuario()}}</td>
+            <tr *ngFor="let reserva of entregaService.reservasEntregado">
+                <td class="col-s-10 pedido">{{reserva.getusuarioreserva.getnombreUsuario}}</td>
             </tr>
         </table>
     </div>
