--- a/src/app/login/login-main/login-main.component.html
+++ b/src/app/login/login-main/login-main.component.html
@@ -1,16 +1,31 @@
+<div class="center-container col-s-12">
+    <div class="form-container">
+        <form (ngSubmit)="loginserices.ingresar()">
+            <div >
+                <h5 class="text-input-own">Usuario</h5>
+                <input 
+                type="text" 
+                class="input-own"
+                id="usuario"
+                placeholder="Ingrese su usuario"
+                name="usuario"
+                [(ngModel)]="loginserices.Usuario"
+                >
+                <h5 class="text-input-own">Contraseña</h5>
+                
+                <input 
+                type="password" 
+                class="input-own"
+                id="contrasena"
+                placeholder="Ingrese su contraseña"
+                name="contrasena"
+                [(ngModel)]="loginserices.Contrasena"
+                >
+            </div>
+            <div class="sub-div-center">
+                <button type="submit" class="btn-own">Ingresar</button>
+            </div>
 
-    <div class="center-container col-s-12">
-        <div class="form-container">
-            <form action="">
-                <div >
-                    <h5 class="text-input-own">Usuario</h5>
-                    <input type="text" class="input-own">
-                    <h5 class="text-input-own">Contraseña</h5>
-                    <input type="password" class="input-own">
-                </div>
-                <div class="sub-div-center">
-                    <button type="submit" class="btn-own">Ingresar</button>
-                </div>
-            </form>
-        </div>
+        </form>
     </div>
+</div>
