--- a/src/app/productos/productos-main/productos-main.component.html
+++ b/src/app/productos/productos-main/productos-main.component.html
@@ -8,17 +8,17 @@
         <div class="col-s-12 content">
             <div class="galeria">
 
-                <div *ngFor="let productolocal1 of productoslocal" class="col-s-6 col-m-4 fotos">
+                <div *ngFor="let productolocal1 of productoService.productoslocal" class="col-s-6 col-m-4 fotos">
                     
-                    <img src={{productolocal1.producto.getimagenproducto()}} alt="">
+                    <img src={{productolocal1.getproducto.getimagenproducto}} alt="">
                         <div class="infor">
-                            <h1>{{productolocal1.producto.getnombreproducto()}}</h1>
-                            <p>{{productolocal1.producto.getdescripcionproducto()}}</p>
-                            <h2>{{productolocal1.getprecioproductolocal()}}</h2>
+                            <h1>{{productolocal1.getproducto.getnombreproducto}}</h1>
+                            <p>{{productolocal1.getproducto.getdescripcionproducto}}</p>
+                            <h2>{{productolocal1.getprecioproductolocal}}</h2>
                         </div>
                         <div class="boton">
                             <ul>
-                                <li><a href="#">Carrito</a></li>
+                                <li><button  (click)="productoService.agregar(productolocal1)">Carrito</button></li>
                             </ul>
                         </div>
                 </div>
