--- a/src/app/registro-usuario/registro-usuario-main/registro-usuario-main.component.html
+++ b/src/app/registro-usuario/registro-usuario-main/registro-usuario-main.component.html
@@ -1,40 +1,94 @@
 <div class="col-s-12">
-    <form>
+    <form (ngSubmit)="registrar()">
       <div class="formulario">
         <label for="nombre">Nombres:</label>
-        <input id="nombre">
+        <input 
+        type="text" 
+        id="nombre"
+        placeholder="Ingrese su nombre"
+        name="nombreusuario"
+        [(ngModel)]="NombreUsuario"
+        >
       </div>
       <div class="formulario">
         <label for="apellido">Apellidos:</label>
-        <input id="apellido">
+        <input 
+        type="text" 
+        id="apellido"
+        placeholder="Ingrese su apellido"
+        name="apellidousuario"
+        [(ngModel)]="ApeliidoUsuario"
+        >
       </div>
       <div class="formulario">
         <label for="usuario">Usuario:</label>
-        <input id="usuario">
+        <input 
+        type="text" 
+        id="usuario"
+        placeholder="usuario"
+        name="usuario"
+        [(ngModel)]="Usuario"
+        >
       </div>
       <div class="formulario">
-        <label for="contraseña">Contraseña:</label>
-        <input type="password" id="contraseña">
+        <label for="contrasena">Contraseña:</label>
+        <input
+        type="password" 
+        id="contrasena"
+        placeholder="Ingrese su contraseña"
+        name="contrasena"
+        [(ngModel)]="Contrasena"
+        >
       </div>
       <div class="formulario">
-        <label for="concontraseña">Confirmar Contraseña:</label>
-        <input type="password"id="concontraseña">
+        <label for="concontrasena">Confirmar Contraseña:</label>
+        <input 
+        type="password" 
+        id="concontrasena"
+        placeholder="Ingrese denuevo su contraseña"
+        name="concontrasena"
+        [(ngModel)]="Contrasenaa"
+        >
       </div>
       <div class="formulario">
         <label for="dni">DNI:</label>
-        <input id="dni">
+        <input 
+        type="text" 
+        id="dni"
+        placeholder="Ingrese su DNI"
+        name="dni"
+        [(ngModel)]="dniUsuario"
+        >
       </div>
       <div class="formulario">
         <label for="celular">Celular:</label>
-        <input type="" id="celular">
+        <input 
+        type="text" 
+        id="celular"
+        placeholder="Ingrese su celular"
+        name="celular"
+        [(ngModel)]="Celular"
+        >
       </div>
       <div class="formulario">
         <label for="correo">Correo:</label>
-        <input type="email" id="correo">
+        <input 
+        type="email" 
+        id="correo"
+        placeholder="Ingrese su correo"
+        name="correo"
+        [(ngModel)]="Correo"
+        >
       </div>
       <div class="formulario">
         <label for="direccion" >Direccion:</label>
-        <input id="direccion">
+        <input 
+        type="text" 
+        id="direccion"
+        placeholder="Ingrese su direccion"
+        name="direccion"
+        [(ngModel)]="Direccion"
+        >
       </div>
 
       <div class="envi">
