--- a/src/app/common-vista/header/header.component.html
+++ b/src/app/common-vista/header/header.component.html
@@ -13,7 +13,7 @@
             </a>
             <ul>
                 <li><a routerLink='' class="active">Bebidas</a></li>
-                <div *ngIf={{cuentaactiva==[]}}>
+                <div>
                 </div>
                 <li><a routerLink='info-user'>Mi perfil</a></li>
                 <li><a routerLink='entrega-pedidos'>Reservas</a></li>
