--- a/src/app/common-vista/header/header.component.html
+++ b/src/app/common-vista/header/header.component.html
@@ -15,8 +15,8 @@
                 <li><a routerLink='' class="active">Bebidas</a></li>
                 <li><a *ngIf="cuentaactiva[2]=='0'|| cuentaactiva[2]=='1'" routerLink='info-user'>Mi perfil</a></li>
                 <li><a *ngIf="cuentaactiva[2]=='0'|| cuentaactiva[2]=='1'" routerLink='entrega-pedidos'>Reservas</a></li>
-                <li><a *ngIf="cuentaactiva[2]=='2'|| cuentaactiva[2]=='1'"href="#">Gestion</a></li>
-                <li><a *ngIf="cuentaactiva.length!=0">Cerrar Sesion</a></li>  
+                <li><a *ngIf="cuentaactiva[2]=='2'|| cuentaactiva[2]=='1'" href="#">Gestion</a></li>
+                <li><a *ngIf="cuentaactiva.length!=0"  (click)="borrar()" routerLink='login'>Cerrar Sesion</a></li>  
                 <li><a *ngIf="cuentaactiva.length==0" routerLink='login'>Iniciar Secion</a></li>  
             </ul>
         </nav>
