--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <!-- <app-gestion-categoria-main></app-gestion-categoria-main> -->
         <!-- <app-gestion-marca-main></app-gestion-marca-main> -->
         <!-- <app-gestion-producto-main></app-gestion-producto-main> -->
-        <app-gestion-proveedor-main></app-gestion-proveedor-main>
+        <!-- <app-gestion-proveedor-main></app-gestion-proveedor-main> -->
         <!-- <app-producto-distribuidor-main></app-producto-distribuidor-main> -->
         <!-- <app-info-user-main></app-info-user-main> -->
         <!-- <app-productos-main></app-productos-main> -->
